--- a/docs/concourse-docs/lib/concourse/resources-table.css
+++ b/docs/concourse-docs/lib/concourse/resources-table.css
@@ -11,8 +11,12 @@
 }
 
 .resources-table ul li {
-  list-style-type: none;
+  list-style: none;
   text-align: center;
+}
+
+.resources-table ul li:before {
+  display: none;
 }
 
 .resources-table ul li:after {
